--- a/TeamProfile.html
+++ b/TeamProfile.html
@@ -35,14 +35,11 @@
                 <i class="fa-solid fa-people-group"></i>
                 <span>Team</span>
             </a>
-
-
-
             <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
             </a>
-            <a href="login.html" class="nav-bullet">
+            <a href="index.html" class="nav-bullet">
                 <i class='bx bx-log-out-circle'></i>
                 <span>Log Out</span>
             </a>
