Update seminars grades box

--- a/studentprofile.html
+++ b/studentprofile.html
@@ -130,6 +130,12 @@
                     <li></li>
                 </ol>
                 <button id="studentSeminarGrade">Grade</button>
+                <!-- Grade Box -->
+                <div id="gradeBox" class="grade-box" style="display: none;">
+                    <h3>Seminar Grade</h3>
+                    <div id="gradeContent"></div>
+                </div>
+
             </div>
         </div>
 
