--- a/ForgetPassword.html
+++ b/ForgetPassword.html
@@ -13,8 +13,8 @@
         <div class="forget_form">
             <div id="step1">
                 <h2>Forgot Password</h2>
-                <input type="email" id="email" placeholder="Enter your email">
-                <button onclick="sendCode()">Send Code</button>
+                <input type="email" name="email" id="email" placeholder="Enter your email">
+                <button onclick="sendCode()">Reset Password</button>
             </div>
 
             <div id="step2" style="display: none;">
@@ -31,9 +31,6 @@
                 <button onclick="resetPassword()">Reset Password</button>
             </div>
         </div>
-
-        
-
         <div class="toggle-box">
             <div class="toggle-panel toggle-left">
                 <h1>Hello, Welcome!</h1>
@@ -46,13 +43,16 @@
                 <p>Don't have an Account?</p>
                 <button class="btn register-btn"><a href="login.html">Register</a></button>
             </div>
-        
+        </div>
+
+        <div id="newPasswordSent" class="popup">
+            <div class="popup-content">
+                <h3>We Have Sent You a New Password</h3>
+                <p>Please check your Email.</p>
+                <button onclick="closeNewPasswordSent()">Okay</button>
+            </div>
         </div>
     </div>
-
-
-
-
     <script src="js/forget.js"></script>
 </body>
 </html>
