--- a/studentprofile.html
+++ b/studentprofile.html
@@ -46,7 +46,7 @@
                             <p class="number">200043358</p>
                         </div>
                     </div>
-                    <button class="Notification-btn" onclick="openModal()">
+                    <button class="Notification-btn" onclick="">
                         <i class="fa-regular fa-bell"></i>
                         <span class="notification-count" id="notificationCount">0</span>
                     </button>
@@ -135,14 +135,13 @@
                     <h3>Seminar Grade</h3>
                     <div id="gradeContent"></div>
                 </div>
-
             </div>
         </div>
 
         <!-- 🔲 Modal -->
         <div class="modal-overlay" id="modal">
             <div class="modal-content">
-                <span class="close-btn" onclick="closeModal()">✖</span>
+                <span class="close-btn" onclick="">✖</span>
                 <h3>Your team members</h3>
                 <div class="team">
                     <hr>
