--- a/editprofile.html
+++ b/editprofile.html
@@ -23,6 +23,10 @@
                 <i class="fa-regular fa-user"></i>
                 <span>Profile</span>
             </a>
+            <a href="EditTeamProfile.html" class="nav-bullet">
+                <i class="fa-solid fa-people-group"></i>
+                <span>Team</span>
+            </a>
             <a href="editprofile.html" class="nav-bullet">
                 <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Profile</span>
