--- a/studentprofile.html
+++ b/studentprofile.html
@@ -149,6 +149,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="/js/StudentProfile.js"></script>
+    <script type="module" src="js/StudentProfile.js"></script>
 </body>
 </html>
